[metadata]
name = yeelib
author = Johannes Hoppe
author-email = info@johanneshoppe.com
summary = Pyhton library for Xioami Mi Yeelight.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/codingjoe/yeelib
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    light
    yeelight

[files]
packages =
    yeelib

[pydocstyle]
add_ignore = D1