[metadata]
name = yeelib
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Python library for Xiaomi Mi Yeelight.
long_description = README.rst
url = https://github.com/codingjoe/yeelib
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: AsyncIO
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries
    Topic :: Home Automation
keywords =
    light
    yeelight
    iot
    asyncio
    home-automation

[options]
install_requires =
    ssdp>=1.0.1

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length=99
exclude = fixtures.py

[pydocstyle]
add_ignore = D1,D401