[metadata]
name = yeelib
author = Johannes Maron
author_email = info@johanneshoppe.com
description = Python library for Xiaomi Mi Yeelight.
long_description = file: README.rst
url = https://github.com/codingjoe/yeelib
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: AsyncIO
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries
    Topic :: Home Automation
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
keywords =
    light
    yeelight
    iot
    asyncio
    home-automation
python_requires = '>=3.9'

[options]
packages = yeelib
install_requires =
    ssdp
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    mocket

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=yeelib

[coverage:report]
show_missing = True

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = yeelib, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
